update main table notebook for smollm

--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -148,6 +148,10 @@
     "\n",
     "    token = path.name.split(\"_\")[-1].split(\".\")[0]\n",
     "\n",
+    "    if \"smollm\" in path.name:\n",
+    "        # not true, but we want to group standard non-aggregated token results for the llm with the cls token results for bert and albert\n",
+    "        token = \"cls\"\n",
+    "\n",
     "    df[\"Token\"] = token\n",
     "    df[\"Setting\"] = setting\n",
     "    df[\"Dataset\"] = dataset\n",
@@ -304,6 +308,7 @@
     "    )\n",
     "    data.loc[:, \"architecture\"] = data[\"architecture\"].map(\n",
     "        {\n",
+    "            \"smollm2-1.7b\": \"SmolLM2\",\n",
     "            \"albert-base-v2\": \"ALBERT\",\n",
     "            \"BERT-L\": \"BERT\",\n",
     "            \"GCN\": \"GCN\",\n",
@@ -327,6 +332,8 @@
     "            \"mnli\": \"MNLI\",\n",
     "            \"sst2_sc_rate0558\": \"SST2\",\n",
     "            \"sst2_mem_rate0\": \"SST2\",\n",
+    "            \"sst2_sft\": \"SST2\",\n",
+    "            \"sst2_sft_sc_rate0558\": \"SST2\",\n",
     "            \"mnli_sc_rate0354\": \"MNLI\",\n",
     "            \"sst2_aug_rate0\": \"SST2\",\n",
     "            \"sst2\": \"SST2\",\n",
@@ -586,6 +593,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## TSNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.concat([nlp_data, graph_data, vision_data])\n",
+    "\n",
+    "idx = data.Setting == \"correlation\"\n",
+    "data.loc[idx, \"value\"] = data.loc[idx, \"corr\"]\n",
+    "\n",
+    "idx = (data.Setting == \"correlation\") & (data[\"functional_similarity_measure\"] == \"AbsoluteAccDiff\")\n",
+    "data.loc[idx, \"Setting\"] = \"acc_corr\"\n",
+    "\n",
+    "idx = (data.Setting == \"correlation\") & (data[\"functional_similarity_measure\"] == \"JSD\")\n",
+    "data.loc[idx, \"Setting\"] = \"jsd_corr\"\n",
+    "\n",
+    "idx = (data.Setting == \"correlation\") & (data[\"functional_similarity_measure\"] == \"Disagreement\")\n",
+    "data.loc[idx, \"Setting\"] = \"disagr_corr\"\n",
+    "\n",
+    "data.loc[:, \"similarity_measure\"] = data.loc[:, \"similarity_measure\"].map(measure_to_abbrv)\n",
+    "\n",
+    "data.functional_similarity_measure.unique()\n",
+    "\n",
+    "data = data.loc[~data.similarity_measure.isin([\"RTD\", \"IMD\"])]\n",
+    "data = pd.merge(data, pd.DataFrame.from_records(measure_types, columns=[\"similarity_measure\", \"Measure Type\"]), how=\"left\", on=\"similarity_measure\")\n",
+    "\n",
+    "data.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_tsne_mds(data: pd.DataFrame, suptitle=None):\n",
+    "    data = data.copy()\n",
+    "    # print(len(data))\n",
+    "    data = data.sort_values(by=[\"Measure Type\", \"similarity_measure\"])\n",
+    "    # print(len(data))\n",
+    "    raw_scores = data.pivot_table(\n",
+    "        index=[\"Measure Type\", \"similarity_measure\"],\n",
+    "        columns=[\"quality_measure\", \"architecture\", \"representation_dataset\", \"Token\", \"Setting\", \"Dataset\"],\n",
+    "        values=\"value\",\n",
+    "        dropna=False,\n",
+    "    ).dropna(axis=\"index\", how=\"all\").fillna(0)\n",
+    "    # print(len(raw_scores))\n",
+    "    # print(raw_scores.loc[raw_scores.index.get_level_values(\"similarity_measure\") == \"Jaccard\"])\n",
+    "    raw_scores = raw_scores.reindex(measure_type_order, axis=\"index\", level=0).reset_index(level=0, drop=True)\n",
+    "    print(len(raw_scores), suptitle)\n",
+    "\n",
+    "    from sklearn.manifold import TSNE\n",
+    "    import numpy as np\n",
+    "\n",
+    "    # Create TSNE plot\n",
+    "    tsne = TSNE(n_components=2, perplexity=3, random_state=42)\n",
+    "    tsne_scores = tsne.fit_transform(raw_scores)\n",
+    "\n",
+    "    # Create MDS plot\n",
+    "    from sklearn.manifold import MDS\n",
+    "\n",
+    "    mds = MDS(n_components=2, random_state=42)\n",
+    "    mds_scores = mds.fit_transform(raw_scores)\n",
+    "\n",
+    "    # Create color maps for each measure type\n",
+    "    measure_types_unique = data[\"Measure Type\"].unique()\n",
+    "    color_maps = {\n",
+    "        \"CCA\": plt.cm.Greys,\n",
+    "        \"Alignment\": plt.cm.Purples,\n",
+    "        \"Neighbors\": plt.cm.Greens,\n",
+    "        \"RSM\": plt.cm.Reds,\n",
+    "        \"Topology\": plt.cm.Oranges,\n",
+    "        \"Statistic\": plt.cm.copper,\n",
+    "    }\n",
+    "\n",
+    "    # Create a mapping of measures to colors based on their type\n",
+    "    unique_measures = raw_scores.index\n",
+    "    measure_to_type = data.groupby(\"similarity_measure\")[\"Measure Type\"].first()\n",
+    "    colors = []\n",
+    "    for measure in unique_measures:\n",
+    "        measure_type = measure_to_type[measure]\n",
+    "        type_idx = np.where(measure_types_unique == measure_type)[0][0]\n",
+    "        # Get number of measures of this type\n",
+    "        n_measures_of_type = (measure_to_type == measure_type).sum()\n",
+    "        # Get position of this measure within its type\n",
+    "        pos_in_type = (measure_to_type[:measure] == measure_type).sum()\n",
+    "        # Create color gradient within type\n",
+    "        color = color_maps.get(measure_type, plt.cm.Greys)(0.3 + (0.7 * pos_in_type / n_measures_of_type))\n",
+    "        colors.append(color)\n",
+    "\n",
+    "    # Create subplot with TSNE and MDS side by side\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(16, 6))\n",
+    "\n",
+    "    # Plot TSNE\n",
+    "    for i, measure in enumerate(unique_measures):\n",
+    "        ax1.scatter(tsne_scores[i, 0], tsne_scores[i, 1], c=[colors[i]], label=measure)\n",
+    "        ax1.text(tsne_scores[i, 0], tsne_scores[i, 1], measure, fontsize=8)\n",
+    "    ax1.set_title(\"t-SNE\")\n",
+    "\n",
+    "    # Plot MDS\n",
+    "    for i, measure in enumerate(unique_measures):\n",
+    "        ax2.scatter(mds_scores[i, 0], mds_scores[i, 1], c=[colors[i]], label=measure)\n",
+    "        ax2.text(mds_scores[i, 0], mds_scores[i, 1], measure, fontsize=8)\n",
+    "    ax2.set_title(\"MDS\")\n",
+    "\n",
+    "    if suptitle is not None:\n",
+    "        fig.suptitle(suptitle)\n",
+    "\n",
+    "    plt.legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "plot_tsne_mds(data, suptitle=\"All domains\")\n",
+    "plot_tsne_mds(data.loc[data.domain == \"NLP\"], suptitle=\"NLP\")\n",
+    "plot_tsne_mds(data.loc[data.domain == \"GRAPHS\"], suptitle=\"Graphs\")\n",
+    "plot_tsne_mds(data.loc[data.domain == \"VISION\"], suptitle=\"Vision\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Rankplots\n",
     "\n",
     "Requires section above to be run as well."
@@ -593,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,6 +789,7 @@
     "data.loc[:, \"Representational Similarity Measure\"] = data[\"Representational Similarity Measure\"].map(measure_to_abbrv)\n",
     "data.loc[:, \"architecture\"] = data[\"architecture\"].map(\n",
     "    {\n",
+    "        \"smollm2-1.7b\": \"SmolLM2\",\n",
     "        \"albert-base-v2\": \"ALBERT\",\n",
     "        \"BERT-L\": \"BERT\",\n",
     "        \"GCN\": \"GCN\",\n",
@@ -677,6 +812,8 @@
     "        \"mnli\": \"MNLI\",\n",
     "        \"sst2_sc_rate0558\": \"SST2\",\n",
     "        \"sst2_mem_rate0\": \"SST2\",\n",
+    "        \"sst2_sft\": \"SST2\",\n",
+    "        \"sst2_sft_sc_rate0558\": \"SST2\",\n",
     "        \"mnli_sc_rate0354\": \"MNLI\",\n",
     "        \"sst2_aug_rate0\": \"SST2\",\n",
     "        \"sst2\": \"SST2\",\n",
