--- a/configs/language/monotonicity_nlp_standard_mnli_smollm.yaml
+++ b/configs/language/monotonicity_nlp_standard_mnli_smollm.yaml
@@ -6,14 +6,14 @@ only_extract_reps: false
 rerun_nans: false
 only_eval: false
 experiments:
-- name: NLP mnli Monotonicity Experiment (Using only CLS Token)
+- name: NLP mnli Monotonicity Experiment (Using Final Token)
   type: MonotonicityExperiment   # Defines the type of experiment class to use
-  representation_dataset: "mnli"
+  representation_dataset: "mnli_sft"
   filter_key_vals:   # Only keeps models that have any of the values for the keys.
     identifier:
-    - Augmentation_0      # These models are set to only use the CLS token for representation comparison, but trained on the standard dataset
+    - Normal
     train_dataset:
-    - "mnli"
+    - "mnli_sft"
     seed:
     - 0
     - 1
@@ -21,7 +21,8 @@ experiments:
     - 3
     - 4
     domain: NLP
-    token_pos: 0
+    token_pos:
+    - -1
   grouping_keys:   # Separates the trained models by this key into groups for the `GroupSeparationExperiment`.
   - train_dataset
   separation_keys:   # Creates a separate experiment for each unique value of the key.
@@ -30,7 +31,7 @@ raw_results_filename: mono_nlp_standard_cls_tok_mnli.parquet # Must end with .pa
 
 table_creation:
   save_full_df: true
-  full_df_filename: mono_nlp_standard_mnli_bertAndAlbert_cls.csv
+  full_df_filename: mono_nlp_standard_mnli_smollm.csv
   # ---
   save_aggregated_df: true
   row_index: similarity_measure # The key to use as the row index in the table.
