--- a/configs/language/monotonicity_nlp_standard_sst2_smollm.yaml
+++ b/configs/language/monotonicity_nlp_standard_sst2_smollm.yaml
@@ -6,14 +6,14 @@ only_extract_reps: false
 rerun_nans: false
 only_eval: false
 experiments:
-- name: NLP mnli Monotonicity Experiment (Using only CLS Token)
+- name: NLP SST2 Monotonicity Experiment (Using Final Token)
   type: MonotonicityExperiment   # Defines the type of experiment class to use
-  representation_dataset: "mnli"
+  representation_dataset: "sst2_sft"
   filter_key_vals:   # Only keeps models that have any of the values for the keys.
     identifier:
-    - Augmentation_0      # These models are set to only use the CLS token for representation comparison, but trained on the standard dataset
+    - Normal
     train_dataset:
-    - "mnli"
+    - "sst2_sft"
     seed:
     - 0
     - 1
@@ -21,16 +21,17 @@ experiments:
     - 3
     - 4
     domain: NLP
-    token_pos: 0
+    token_pos:
+    - -1
   grouping_keys:   # Separates the trained models by this key into groups for the `GroupSeparationExperiment`.
   - train_dataset
   separation_keys:   # Creates a separate experiment for each unique value of the key.
   - architecture
-raw_results_filename: mono_nlp_standard_cls_tok_mnli.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: mono_nlp_standard_cls_tok_sst2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: true
-  full_df_filename: mono_nlp_standard_mnli_bertAndAlbert_cls.csv
+  full_df_filename: mono_nlp_standard_sst2_smollm.csv
   # ---
   save_aggregated_df: true
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -38,6 +39,6 @@ table_creation:
   - quality_measure
   - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: mono_nlp_standard_cls_tok_mnli.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: mono_nlp_standard_cls_tok_sst2.csv # Can be [.xlsx / .csv / .tex] file extension
 excluded_measures:
 - GeometryScore
