update nlp eval figures: add smollm

--- a/nlp/notebooks/explore_model_evaluation.ipynb
+++ b/nlp/notebooks/explore_model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import re\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "from matplotlib.lines import Line2D\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
@@ -138,12 +139,13 @@
    "source": [
     "selection = data.loc[\n",
     "    # (data.arch == \"albert-base-v2\") &\n",
-    "    (data.arch == \"BERT-L\") &\n",
-    "    # (data.train_dataset_base == \"sst2\") &\n",
-    "    (data.train_dataset_base == \"mnli\") &\n",
+    "    # (data.arch == \"BERT-L\") &\n",
+    "    (data.arch == \"smollm2-1.7b\") &\n",
+    "    (data.train_dataset_base == \"sst2\") &\n",
+    "    # (data.train_dataset_base == \"mnli\") &\n",
     "    # (data.train_setting == \"Augmentation\")\n",
-    "    # (data.train_setting == \"Shortcut\")\n",
-    "    (data.train_setting == \"RandomLabels\")\n",
+    "    (data.train_setting == \"Shortcut\")\n",
+    "    # (data.train_setting == \"RandomLabels\")\n",
     "    # & (data.dataset==\"sst2_aug_rate0\")\n",
     "    # & (data.dataset==\"mnli_aug_rate0\")\n",
     "    # & (data.dataset.isin([\"sst2_sc_rate10\", \"sst2_sc_rate0558\"]))\n",
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,6 +296,9 @@
     "    axes[1].set_xlabel(\"Dataset\")\n",
     "    ax = axes[1]\n",
     "    handles, labels = ax.get_legend_handles_labels()\n",
+    "    handles[0].set_markerfacecolor(\"C0\")\n",
+    "    handles[1].set_markerfacecolor(\"C1\")\n",
+    "    handles[2].set_markerfacecolor(\"C3\")\n",
     "    handles = [handles[0], handles[1], handles[2]]\n",
     "    labels = [\"55.8/35.4\", \"88.9/83.9\", \"100/100\"]\n",
     "    ax.legend(handles=handles, labels=labels, ncol=1, fontsize=\"small\", title=\"Rate (SST2/MNLI)\", )\n",
@@ -329,6 +334,7 @@
     "    axes[2].set_title(\"Augmentation\")\n",
     "    axes[2].set_ylabel(\"\")\n",
     "    axes[2].set_xlabel(\"Dataset\")\n",
+    "\n",
     "    ax = axes[2]\n",
     "    handles, labels = ax.get_legend_handles_labels()\n",
     "    ax.legend(handles=handles, labels=labels, ncol=1, fontsize=\"small\", title=\"Rate\", )\n",
@@ -337,8 +343,76 @@
     "    plt.tight_layout()\n",
     "    fig.savefig(f\"../../figs/nlp_accs_{arch}.pdf\", bbox_inches=\"tight\")\n",
     "\n",
-    "create_validation_plot(data, \"BERT-L\")\n",
-    "create_validation_plot(data, \"albert-base-v2\")"
+    "\n",
+    "def create_validation_plot_smollm(data, arch: str):\n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(7, 6))\n",
+    "    sns.stripplot(\n",
+    "    data=data.loc[\n",
+    "        (data.train_setting == \"RandomLabels\")\n",
+    "        & (data.arch == arch)\n",
+    "        & data.dataset.isin([\"sst2_sft_mem_rate0\", \"mnli_sft_mem_rate0\"])\n",
+    "        & data.split.isin([\"validation\", \"validation_matched\"])\n",
+    "        & data.Strength.isin([0, 75, 100])\n",
+    "        & (data.train_seed.astype(int) < 128)\n",
+    "    ],\n",
+    "    y=\"acc\",\n",
+    "    hue=\"Strength\",\n",
+    "    x=\"train_dataset_base\",\n",
+    "    palette=palette,\n",
+    "    ax=axes[0],\n",
+    ")\n",
+    "    axes[0].set_title(\"Label Randomization\")\n",
+    "    axes[0].set_ylabel(\"Validation Accuracy\")\n",
+    "    axes[0].set_xlabel(\"Dataset\")\n",
+    "    ax = axes[0]\n",
+    "    handles, labels = ax.get_legend_handles_labels()\n",
+    "    ax.legend(handles=handles, labels=labels, ncol=1, fontsize=\"small\", title=\"Rate\")\n",
+    "    xticklabels = [\"SST2\", \"MNLI\"]\n",
+    "    ax.set_xticklabels(xticklabels)\n",
+    "\n",
+    "    sns.stripplot(\n",
+    "        data=data.loc[\n",
+    "            (data.train_setting == \"Shortcut\")\n",
+    "        & (data.arch == arch)\n",
+    "            & data.dataset.isin([\"sst2_sft_sc_rate0558\", \"mnli_sft_sc_rate0354\"])\n",
+    "            & data.split.isin([\"validation\", \"validation_matched\"])\n",
+    "            & data.Strength.isin([55.8, 35.4, 83.9, 88.9, 100])\n",
+    "        ],\n",
+    "        y=\"acc\",\n",
+    "        hue=\"Strength\",\n",
+    "        x=\"train_dataset_base\",\n",
+    "        palette=palette,\n",
+    "        ax=axes[1],\n",
+    "        legend=True,\n",
+    "    )\n",
+    "    axes[1].set_title(\"Shortcut Affinity\")\n",
+    "    axes[1].set_ylabel(\"\")\n",
+    "    axes[1].set_xlabel(\"Dataset\")\n",
+    "    ax = axes[1]\n",
+    "    handles, labels = ax.get_legend_handles_labels()\n",
+    "    handles[0].set_markerfacecolor(\"C0\")\n",
+    "    handles[1].set_markerfacecolor(\"C1\")\n",
+    "    handles[2].set_markerfacecolor(\"C3\")\n",
+    "    handles = [handles[0], handles[1], handles[2]]\n",
+    "    labels = [\"55.8/35.4\", \"88.9/83.9\", \"100/100\"]\n",
+    "    ax.legend(handles=handles, labels=labels, ncol=1, fontsize=\"small\", title=\"Rate (SST2/MNLI)\", )\n",
+    "    ax.set_xticklabels(xticklabels)\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    fig.savefig(f\"../../figs/nlp_accs_{arch}.pdf\", bbox_inches=\"tight\")\n",
+    "\n",
+    "# create_validation_plot(data, \"BERT-L\")\n",
+    "# create_validation_plot(data, \"albert-base-v2\")\n",
+    "create_validation_plot_smollm(data, \"smollm2-1.7b\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
    ]
   },
   {
