Update tables and figures

--- a/appendix_tables.ipynb
+++ b/appendix_tables.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,29 +193,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "cleaned_dfs = []\n",
-    "root = BASE_PATH /\"paper_results\" /\"vision\"\n",
+    "root = BASE_PATH /\"paper_results\" /\"vision_cameraready\"\n",
     "for path in root.glob(\"*.csv\"):\n",
     "    df = pd.read_csv(path, index_col=0)\n",
-    "    pattern = r\"aug|mem|mono|correlation|sc\"\n",
+    "    pattern = r\"aug|augment|mem|randomlabel|mono|correlation|output|sc|shortcut\"\n",
     "    match = re.search(pattern, path.name)\n",
     "    pattern_to_setting = {\n",
     "        \"aug\": \"aug\",\n",
+    "        \"augment\": \"aug\",\n",
     "        \"mem\": \"mem\",\n",
+    "        \"randomlabel\": \"mem\",\n",
     "        \"mono\": \"mono\",\n",
     "        \"correlation\": \"correlation\",\n",
+    "        \"output\": \"correlation\",\n",
     "        \"sc\": \"sc\",\n",
+    "        \"shortcut\": \"sc\",\n",
     "    }\n",
     "    setting = pattern_to_setting[match.group(0)]\n",
     "\n",
-    "    pattern = r\"(?<=_)in100(?=_)|(?<=_)c100(?=_)\"\n",
+    "    pattern = r\"(?<=_)in100(?=_)|(?<=_)c100(?=_)|in100(?=_)|c100(?=_)|C100(?=_)\"\n",
     "    match = re.search(pattern, path.name)\n",
-    "    assert match is not None\n",
+    "    assert match is not None,  f\"{path} was not matched to setting\"\n",
     "    dataset = match.group(0)\n",
+    "    if dataset == \"C100\":\n",
+    "        dataset = \"c100\"\n",
     "\n",
     "    df[\"Setting\"] = setting\n",
     "    df[\"Dataset\"] = dataset\n",
@@ -369,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,12 +1212,12 @@
     "    resizebox_width=0.7,\n",
     ")\n",
     "\n",
-    "# texify(\n",
-    "#     pivot.loc[:, (\"Grounding by Prediction\", [\"JSD Corr.\", \"Disagr. Corr.\"])],\n",
-    "#     \"tables/vision_test_2_cifar.tex\",\n",
-    "#     r\"Results of Test 2 (\\emph{Correlation to Output Difference}) for the vision domain on CIFAR-100.\",\n",
-    "#     \"tab:vision_results_test_2_cifar\",\n",
-    "# )\n",
+    "texify(\n",
+    "    pivot.loc[:, (\"Grounding by Prediction\", [\"JSD Corr.\", \"Disagr. Corr.\"])],\n",
+    "    \"tables/vision_test_2_cifar.tex\",\n",
+    "    r\"Results of Test 2 (\\emph{Correlation to Output Difference}) for the vision domain on CIFAR-100.\",\n",
+    "    \"tab:vision_results_test_2_cifar\",\n",
+    ")\n",
     "\n",
     "texify(\n",
     "    pivot.loc[:, (\"Grounding by Design\", \"Random Labels\")],\n",
@@ -1251,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1785,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
