--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,29 +210,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "cleaned_dfs = []\n",
-    "root = BASE_PATH /\"paper_results\" /\"vision\"\n",
+    "root = BASE_PATH /\"paper_results\" /\"vision_cameraready\"\n",
     "for path in root.glob(\"*.csv\"):\n",
     "    df = pd.read_csv(path, index_col=0)\n",
-    "    pattern = r\"aug|mem|mono|correlation|sc\"\n",
+    "    pattern = r\"aug|augment|mem|randomlabel|mono|correlation|output|sc|shortcut\"\n",
     "    match = re.search(pattern, path.name)\n",
     "    pattern_to_setting = {\n",
     "        \"aug\": \"aug\",\n",
+    "        \"augment\": \"aug\",\n",
     "        \"mem\": \"mem\",\n",
+    "        \"randomlabel\": \"mem\",\n",
     "        \"mono\": \"mono\",\n",
     "        \"correlation\": \"correlation\",\n",
+    "        \"output\": \"correlation\",\n",
     "        \"sc\": \"sc\",\n",
+    "        \"shortcut\": \"sc\",\n",
     "    }\n",
     "    setting = pattern_to_setting[match.group(0)]\n",
     "\n",
-    "    pattern = r\"(?<=_)in100(?=_)|(?<=_)c100(?=_)\"\n",
+    "    pattern = r\"(?<=_)in100(?=_)|(?<=_)c100(?=_)|in100(?=_)|c100(?=_)|C100(?=_)\"\n",
     "    match = re.search(pattern, path.name)\n",
-    "    assert match is not None\n",
+    "    assert match is not None,  f\"{path} was not matched to setting\"\n",
     "    dataset = match.group(0)\n",
+    "    if dataset == \"C100\":\n",
+    "        dataset = \"c100\"\n",
     "\n",
     "    df[\"Setting\"] = setting\n",
     "    df[\"Dataset\"] = dataset\n",
@@ -727,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1665,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
