--- a/configs/language/mem_mnli_smollm.yaml
+++ b/configs/language/mem_mnli_smollm.yaml
@@ -44,3 +44,5 @@ table_creation:
   filename: mem_mnli_smollm.csv # Can be [.xlsx / .csv / .tex] file extension
 excluded_measures:
 - GeometryScore
+- RTD
+- IMDScore
