--- a/configs/language/monotonicity_nlp_standard_mnli_smollm.yaml
+++ b/configs/language/monotonicity_nlp_standard_mnli_smollm.yaml
@@ -42,3 +42,4 @@ table_creation:
   filename: mono_nlp_standard_cls_tok_mnli.csv # Can be [.xlsx / .csv / .tex] file extension
 excluded_measures:
 - GeometryScore
+- IMDScore
