--- a/configs/language/sc_mnli_smollm_rtd.yaml
+++ b/configs/language/sc_mnli_smollm_rtd.yaml
@@ -3,29 +3,23 @@ threads: 1
 cache_to_disk: false
 cache_to_mem: true
 only_extract_reps: false
-only_eval: false
 rerun_nans: false
+only_eval: false
 experiments:
-- name: NLP MNLI Correlation Experiments
-  type: OutputCorrelationExperiment   # Defines the type of experiment class to use
-  use_acc_comparison: true
-  representation_dataset: "mnli_sft"
+- name: NLP Shortcut Smollm2 Experiments
+  type: GroupSeparationExperiment   # Defines the type of experiment class to use
+  representation_dataset: "mnli_sft_sc_rate0354"
   filter_key_vals:   # Only keeps models that have any of the values for the keys.
-    identifier:
-    - "Normal"
     train_dataset:
-    - "mnli_sft"
+    - "mnli_sft_sc_rate0354"
+    - "mnli_sft_sc_rate08385"
+    - "mnli_sft_sc_rate10"
     seed:
     - 0
     - 1
     - 2
     - 3
     - 4
-    - 5
-    - 6
-    - 7
-    - 8
-    - 9
     domain: NLP
     architecture:
     - "smollm2-1.7b"
@@ -33,18 +27,20 @@ experiments:
   - train_dataset
   separation_keys:   # Creates a separate experiment for each unique value of the key.
   - architecture
-raw_results_filename: correlation_nlp_standard_mnli_smollm.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: nlp_shortcuts_mnli_smollm_rtd.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: true
-  full_df_filename: correlation_nlp_standard_mnli_smollm.csv
+  full_df_filename: sc_mnli_smollm_full_rtd.csv
   # ---
-  save_aggregated_df: false
+  save_aggregated_df: true
   row_index: similarity_measure # The key to use as the row index in the table.
   columns: # The keys to use as columns (can be list[str] or a str)
   - quality_measure
   - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: nlp_standard_mnli_smollm.csv # Can be [.xlsx / .csv / .tex] file extension
-excluded_measures:
-- GeometryScore
+  filename: sc_mnli_smollm.csv # Can be [.xlsx / .csv / .tex] file extension
+included_measures:
+#- GeometryScore
+  - RTD
+  #- IMDScore
