--- a/nlp/llm_tests.ipynb
+++ b/nlp/llm_tests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer(\"3\")\n",
-    "# tokenizer(\"You are a helpful assistant that rates the sentiment of sentences as positive or negative.\\nSentence: you do n't have to know about music to appreciate the film 's easygoing blend of comedy and romance . \\nOptions:\\nA) positive\\nB) negative\\nAnswer:3\")"
+    "# tokenizer(\"3\")\n",
+    "# tokenizer(\"You are a helpful assistant that rates the sentiment of sentences as positive or negative.\\nSentence: you do n't have to know about music to appreciate the film 's easygoing blend of comedy and romance . \\nOptions:\\nA) positive\\nB) negative\\nAnswer:3\")\n",
+    "tokenizer(\"A) positive\\nB) negative\\nAnswer:3\", return_tensors=\"pt\")"
    ]
   },
   {
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
