change example table: sst2 instead of mnli

--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -396,7 +396,8 @@
     "# ----------------------------------------------------------------------------------------------------------------------\n",
     "# Create aggregated overview table\n",
     "# ----------------------------------------------------------------------------------------------------------------------\n",
-    "idx = data[\"Dataset\"].isin([\"MNLI\", \"flickr\", \"IN100\"]) & data[\"Arch.\"].isin([\"SAGE\", \"BERT\", \"RNet18\"])\n",
+    "# idx = data[\"Dataset\"].isin([\"MNLI\", \"flickr\", \"IN100\"]) & data[\"Arch.\"].isin([\"SAGE\", \"BERT\", \"RNet18\"])\n",
+    "idx = data[\"Dataset\"].isin([\"SST2\", \"flickr\", \"IN100\"]) & data[\"Arch.\"].isin([\"SAGE\", \"BERT\", \"RNet18\"])\n",
     "\n",
     "\n",
     "pivot = pd.pivot_table(\n",
@@ -466,7 +467,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = data[\"Dataset\"].isin([\"MNLI\", \"flickr\", \"IN100\"]) & data[\"Arch.\"].isin([\"SAGE\", \"BERT\", \"RNet18\"]) & data.Test.isin([\"Acc Corr.\", \"JSD Corr.\"])\n",
+    "idx = data[\"Dataset\"].isin([\"SST2\", \"flickr\", \"IN100\"]) & data[\"Arch.\"].isin([\"SAGE\", \"BERT\", \"RNet18\"]) & data.Test.isin([\"Acc Corr.\", \"JSD Corr.\"])\n",
+    "# idx = data[\"Dataset\"].isin([\"MNLI\", \"flickr\", \"IN100\"]) & data[\"Arch.\"].isin([\"SAGE\", \"BERT\", \"RNet18\"]) & data.Test.isin([\"Acc Corr.\", \"JSD Corr.\"])\n",
     "data_corr = data.loc[idx].copy()\n",
     "\n",
     "\n",
@@ -755,7 +757,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vision_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data = pd.concat([nlp_data, graph_data, vision_data])\n",
+    "# display(data[(data.Setting == \"mono\") & (data.similarity_measure == \"RTD\")].head())\n",
     "data = data.rename(\n",
     "    columns={\n",
     "        \"functional_similarity_measure\": \"Functional Similarity Measure\",\n",
@@ -764,6 +785,14 @@
     "    }\n",
     ")\n",
     "data = data.reset_index()\n",
+    "\n",
+    "# # remove cifar\n",
+    "# idx = data.Dataset == \"c100\"\n",
+    "# data = data.loc[~idx, :]\n",
+    "\n",
+    "# # remove mono\n",
+    "# idx = data.Setting == \"mono\"\n",
+    "# data = data.loc[~idx, :]\n",
     "\n",
     "idx = data.Setting == \"correlation\"\n",
     "data.loc[idx, \"value\"] = data.loc[idx, \"corr\"]\n",
@@ -784,13 +813,16 @@
     "# data = data.loc[~idx]\n",
     "\n",
     "data[\"rank\"] = data.groupby([\"domain\", \"Setting\", \"Dataset\", \"architecture\", \"model\", \"Token\"], as_index=True)[\"value\"].rank(\n",
-    "    ascending=False\n",
+    "    ascending=False, method=\"min\", na_option=\"keep\"\n",
     ")\n",
+    "display(data[(data.Setting == \"mono\") & (data[\"Representational Similarity Measure\"] == \"RTD\")].head())\n",
+    "\n",
     "\n",
     "# combine layer mono results to equally weight experiments\n",
-    "idx = data.model != \"agg\"\n",
-    "data.loc[idx, \"rank\"] = data[idx].groupby([\"domain\", \"Setting\", \"Dataset\", \"architecture\", \"Token\"])[\"rank\"].mean().reset_index()\n",
+    "idx = (data.model != \"agg\") & (~data[\"rank\"].isna())\n",
+    "data.loc[idx, \"rank\"] = data[idx].groupby([\"domain\", \"Setting\", \"Dataset\", \"architecture\", \"Token\"])[\"rank\"].transform(\"mean\")\n",
     "data = data.drop_duplicates(subset=[\"domain\", \"Setting\", \"Dataset\", \"architecture\", \"Representational Similarity Measure\", \"Functional Similarity Measure\", \"Quality Measure\"])\n",
+    "\n",
     "\n",
     "data.loc[:, \"Representational Similarity Measure\"] = data[\"Representational Similarity Measure\"].map(measure_to_abbrv)\n",
     "data.loc[:, \"architecture\"] = data[\"architecture\"].map(\n",
@@ -842,6 +874,8 @@
     "        \"sc\": \"Shortcuts\",\n",
     "    }\n",
     ")\n",
+    "# display(data[(data.Setting == \"Layer Mono.\")  & (data[\"Representational Similarity Measure\"] == \"RTD\")].head())\n",
+    "\n",
     "\n",
     "data.loc[:, \"Quality Measure\"] = data[\"Quality Measure\"].map(\n",
     "    {\"violation_rate\": \"Conformity Rate\", \"AUPRC\": \"AUPRC\", \"spearmanr\": \"Spearman\", \"correlation\": \"Spearman\"}\n",
@@ -849,6 +883,7 @@
     "data.loc[data[\"Quality Measure\"] == \"Conformity Rate\", \"value\"] = (\n",
     "    1 - data.loc[data[\"Quality Measure\"] == \"Conformity Rate\", \"value\"]\n",
     ")  # must be run in conjunction with the above renaming\n",
+    "# display(data[(data.Setting == \"Layer Mono.\") & (data[\"Representational Similarity Measure\"] == \"RTD\")].head())\n",
     "\n",
     "data = data.rename(\n",
     "    columns={\n",
@@ -859,8 +894,19 @@
     "        \"Setting\": \"Scenario\",\n",
     "    }\n",
     ")\n",
+    "# display(data[(data.Scenario == \"Layer Mono.\") & (data[\"Sim Meas.\"] == \"RTD\")].head())\n",
     "\n",
     "data = data.sort_values(by=[\"Sim Meas.\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake = pd.DataFrame({\"a\": [2, 2, 2, 2, 2, 2, 3]})\n",
+    "fake.rank(method=\"min\", ascending=False)"
    ]
   },
   {
@@ -903,7 +949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_data = pd.merge(data, avg_ranks).sort_values(by=[\"med_rank\"])\n",
+    "plot_data = pd.merge(data, avg_ranks).sort_values(by=[\"med_rank\", \"avg_rank\"])\n",
     "plot_data = pd.merge(plot_data, pd.DataFrame.from_records(measure_types, columns=[\"Sim Meas.\", \"Measure Type\"]), how=\"left\", on=\"Sim Meas.\")\n",
     "\n",
     "fig, axes = plt.subplots(1, 3, sharey=False, figsize=(7*0.8*3, 7))\n",
